Updated the project SASS to add width to the description section and fix overflow issues

--- a/src/sass/partials/project/_global.sass
+++ b/src/sass/partials/project/_global.sass
@@ -5,6 +5,7 @@
 body
     display: flex
     flex-flow: column-reverse
+    align-items: center
     background-color: $slate
     font-family: 'Roboto', sans-serif
     font-size: 16px
